--- a/Theme1.css
+++ b/Theme1.css
@@ -16,7 +16,7 @@ h1 {
 
 .slider_holder {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
